-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Critical - P2
-
Affects Version/s: None
-
Component/s: None
-
DB Integration & Observability
-
Fully Compatible
-
ALL
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This field is not correct on mongos, because mongos has no knowledge of views. Fixing this is tracked under SERVER-114178, but in the meantime we should remove it so that we are not reporting incorrect information.
We may also want to remove it from getMore's, as it is incorrect there as well (on both mongos and mongod).
- is depended on by
-
SERVER-113634 Track knownTimeseriesNamespaces in OpDebug in all commands
-
- Closed
-
- is related to
-
SERVER-114178 Slow query logs on mongos have the wrong collectionType for aggregations on views
-
- Backlog
-
-
SERVER-122110 Remove knownTimeseriesNamespaces from OpDebug
-
- Closed
-
- related to
-
SERVER-123674 Reduce collectionType setting overhead in hot paths
-
- Closed
-
-
SERVER-123481 Propagate collectionType for getMore slow query logs
-
- Backlog
-