SERVER-119978 Remove collectionType field from slow query log when it is unavailable (#50628)

GitOrigin-RevId: acf4c39c8563d9e5b2df3c891d9ec0ff7a5b43e6